tests/cases/borrowing/errors/return-borrow.ari
fn leak(value: ref i64) -> ref i64 {
  var local: i64 = 1;
  return ref local;
}

fn main() -> i64 {
  return 0;
}
